--- a/management/costs.tex
+++ b/management/costs.tex
@@ -8,29 +8,22 @@ Next, another vital component from our project is the Xadow - IMU 6DOF, which is
 The last items ordered were some Velcro tape and some masking tape. This were required in order to attach the device to a subject in order to evaluate the devices functionality.
 \begin{table}[h]
 	\centering
-	\begin{tabular}{lllllllllll}
+	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
 		\hline
-		$Component name$ & $Supplier$ & $Price(\pounds)$ \\
+		Component name & Supplier & Price (\pounds) \\
 		\hline
 		mbed NXP LPC11U24 & RS Components Ltd (MarketPlace) & 45.48\\
-		\hline
 		Xadow - IMU 6DOF Motion Tracker & Active Robots & 13.8240 \\
-		\hline
 		SD/MMC Card Breakout & Active Robots & 6.5400 \\
-		\hline
 		BH322-1A  Holder &  Onecall (Marketplace) & 3.6720 \\
-		\hline
 		Velcro Tape Loop &  Onecall (Marketplace) & 4.7640 \\
-		\hline
 		Velctro Tape Hook &  Onecall (Marketplace) & 4.7640 \\
-		\hline
 		AA 10 pack &  Onecall (Marketplace) & 7.1400 \\
-		\hline
 		Masking Tape 25mmX50m &  Onecall (Marketplace) &1.776 \\
-		\hline 
 		Delivery charge &  & 4.3200	\\
-		\hline	
-		Total &  & 92.28 \\
+		\hline
+		\multicolumn{2}{|r|}{\textbf{Total}} & \textbf{92.28} \\
+		\hline
 	\end{tabular}
 	\caption{Component costs}
 	\label{table: 1}
