--- a/research/components.tex
+++ b/research/components.tex
@@ -2,19 +2,15 @@
 This section discusses the extensive analysis the team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers and gyroscopes.
 \begin{table}[h]
 	\centering
-	\begin{tabular}{llllll}
+	\begin{tabular}{|l|l|l|l|l|l|}
 		\hline
-		$Name$ & $Voltagee$ & $Current(Acc+Gyro)$ & $Mounting$ & $Acc/Gyro$ \\
+		Name & Voltage & Current(Acc+Gyro) & Mounting & Acc/Gyro \\
 		\hline
 		Breakout MPU-6050 & 2.3-3.4V & 500$\mu$A+3.6mA & Surface mount & Both\\
-		\hline
-		 ADXL193 Board & 3.5-6V & 1.5mA & Surface Mount & Acc \\
-		\hline
+		ADXL193 Board & 3.5-6V & 1.5mA & Surface Mount & Acc \\
 		Xadow IMU 6DOF  & 3.3V &  500$\mu$A+3.6mA & Mount on & Both \\
-		\hline
 		Xadow 3-Axis Acc &  3.3V & 500$\mu$A & Surface Mount & Acc \\
-		\hline
-		 L3G4200D &  2.7-6.5V & 6.1mA & Mount on  & Gyro \\
+		L3G4200D &  2.7-6.5V & 6.1mA & Mount on  & Gyro \\
 		\hline
 	\end{tabular}
 	\caption{Sensor options}
