Removed 'we' from Gantt appendix

--- a/appendices/gantt.tex
+++ b/appendices/gantt.tex
@@ -1,6 +1,6 @@
 \chapter{Gantt charts}\label{ch:gantt}
 
-The following 2 pages show our planned Gantt charts.
+The following two pages show the team's planned Gantt charts.
 
 \begin{landscape}
 
