--- a/software/algorithm.tex
+++ b/software/algorithm.tex
@@ -1,10 +1,10 @@
 \namedsection{Developing the Algorithm}{Shepherd}
 
-Taking into account the constraints of the system, it was decided to focus on the MultiLayer Perceptron as it does not require matrix maths and typically has a smaller network of nodes. This section discusses the process by which we developed an implementation of this algorithm.
+Taking into account the constraints of the system, it was decided to focus on the Multilayer Perceptron as it does not require matrix maths and typically has a smaller network of nodes. This section discusses the process by which we developed an implementation of this algorithm.
 
 \subsection{Existing Weka Implementation \label{sec:weka-code}}
 
-As Weka had been used to determine and train the best algorithm, it was decided to inspect its source code to obtain a starting point for the algorithm development. This, while provided a good insight into the manner in which the algorithm functions, highlighted some key areas of inefficiencies that would have to be avoided when working on a sub-threshold device.
+As Weka had been used to determine and train the best algorithm, it was decided to inspect its source code to obtain a starting point for the algorithm development. This, while providing a good insight into the manner in which the algorithm functions, highlighted some key areas of inefficiencies that would have to be avoided when working on a sub-threshold device.
 
 \subsubsection{Backward Propagation}
 
