Fixed second typo in abstract

--- a/report.tex
+++ b/report.tex
@@ -64,7 +64,7 @@
 	\degrees     {Master of Engineering}
 	\maketitle
 	\begin{abstract}
-		This paper details the process by which the team developed an exercise detection algorithm capable of running on a sub threshold Cortex M0+. The report explains the process by which a user study was carried out to obtain movement data of multiple people performing the exercises, then discusses the methods by which this was processed. It provides a review of the exercise detection systems in use to today and compares various Machine Learning algorithms, settling on a Multilayer Perceptron with added case-specific heuristics. The paper explains the choice of emulating the proposed device on a Cortex M0, running on an mBed platform and compares this to an FPGA before describing the process of designing, building and working with the hardware. The work to develop the software for a constrained system is then analysed, focusing on the optimisations to the mBed library to reduce required size and the removal of floating point from the algorithm. Finally, the results of this work is reviewed, proving that the working algorithm requires 3456 bytes and can run on a $861 \mu W$ system. The report finishes with an overview of the project management and concludes that the project is a successful proof of concept.
+		This paper details the process by which the team developed an exercise detection algorithm capable of running on a sub threshold Cortex M0+. The report explains the process by which a user study was carried out to obtain movement data of multiple people performing the exercises, then discusses the methods by which this was processed. It provides a review of the exercise detection systems in use to today and compares various Machine Learning algorithms, settling on a Multilayer Perceptron with added case-specific heuristics. The paper explains the choice of emulating the proposed device on a Cortex M0, running on an mBed platform and compares this to an FPGA before describing the process of designing, building and working with the hardware. The work to develop the software for a constrained system is then analysed, focusing on the optimisations to the mBed library to reduce required size and the removal of floating point from the algorithm. Finally, the results of this work are reviewed, proving that the working algorithm requires 3456 bytes and can run on a $861 \mu W$ system. The report finishes with an overview of the project management and concludes that the project is a successful proof of concept.
 	\end{abstract}
 	\tableofcontents
 	\listoffigures
