Fixed typos in conclusion

--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -4,8 +4,8 @@ This project set out to investigate the feasibility of applying complex algorith
 
 The findings indicate that it is possible to create an algorithm capable of achieving this by performing a variety of optimisations. These include several methods of reducing the overall binary size, such as the removal of unnecessary overheads in libraries, to allow the code to fit in the limited memory space. On top of this, reducing the amount of processing required was also accomplished by writing efficient approximations of complex functions and removing the need of floating point arithmetic.
 
-As a result of this work, the developed system not only fits within the constraints of the specification, but it does so with large scope for further scope. The total memory requirement of the device, 3456 bytes, is under half of the initial constraint of 8kB. Similarly, the device is clocked at just 166kHz, only 2.3\% above the absolute lower threshold. The client was extremely happy with this, and has expressed a desire to use this work on ARM's physical sub-threshold software, as discussed in Appendix \ref{app:customer}.
+As a result of this work, the developed system not only fits within the constraints of the specification, but it does so with large scope for further scope. The total memory requirement of the device, 3456 bytes, is under half of the initial constraint of 8kB. Similarly, the device is clocked at just 166kHz, only 2.3\% above the absolute lower threshold. The client was extremely happy with this, and has expressed a desire to use this work on ARM's physical sub-threshold platform, as discussed in Appendix \ref{app:customer}.
 
-The team is satisﬁed that they acted effectively as a group, particularly in respect to separating tasks in a sensible manner. The communication between members was very strong, in part because the morale between the individuals, and in part because of the professional tools and best practices that were used, such the decision to organise the work with Slack and the use of feature branches within Git repositories to avoid merge conflicts which can take time to fix, and run the risk of introducing errors into a codebase.
+The team is satisfied that they acted effectively as a group, particularly in respect to separating tasks in a sensible manner. The communication between members was very strong, in part because the morale between the individuals, and in part because of the professional tools and best practices that were used, such the decision to organise the work with Slack and the use of feature branches within Git repositories to avoid merge conflicts which can take time to fix, and run the risk of introducing errors into a code base.
 
 To conclude, the team feel that this project successfully demonstrates that extremely constrained devices such as the prototype sub-threshold Cortex-M0+ can still be relied upon for important functions.
