Minor changes to last line

--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -8,4 +8,4 @@ As a result of this work, the developed system not only fits within the constrai
 
 The team is satisfied that they acted effectively as a group, particularly in respect to separating tasks in a sensible manner. The communication between members was very strong, in part because the morale between the individuals was high, and in part because of the professional tools and best practices that were used. For example, the decisions to organise the work with Slack and the use of feature branches within Git repositories to avoid merge conflicts. These can take time to fix, and run the risk of introducing errors into a code base.
 
-To conclude, the team feel that this project successfully demonstrates that extremely constrained devices such as the prototype sub-threshold Cortex-M0+ can still be relied upon for important functions.
+To conclude, the group believe that this project successfully demonstrates that extremely constrained devices such as the prototype sub-threshold Cortex-M0+ may be relied upon for important functions.
